--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -26,10 +26,17 @@
 	HOME
 ************/
 
-@media only screen and (max-width: 1030px) {
+@media only screen and (max-width: 1380px) {
 	.slider_container
 	{
-		height: 400px;
+		height: 520px;
+	}
+}
+
+@media only screen and (max-width: 1025px) {
+	.slider_container
+	{
+		height: 390px;
 	}
 }
 
@@ -155,7 +162,7 @@
 	.service_modal_header
 	{
 		margin-top: 15px;
-		font-size: 1.3em;
+		font-size: 1.2em!important;
 		font-weight: 900;
 		color: #fd431a;
 		text-transform: uppercase;
@@ -182,7 +189,7 @@
 	.service_modal_header
 	{
 		margin-top: 15px;
-		font-size: 1em;
+		font-size: 1em!important;
 		font-weight: 900;
 		color: #fd431a;
 		text-transform: uppercase;
@@ -193,6 +200,9 @@
 		padding: 20px 40px;
 		font-size: 1em;
 		text-align: justify;
+	}
+	.service-text{
+		font-size: 0.8em!important;
 	}
 	.uni_modal_header {
 	    font-size: 0.9em;
@@ -216,6 +226,11 @@
 		padding-top: 80px;
 		padding-bottom: 120px;
 		background: #1e91d2;
+	}
+	#work
+	{
+		padding-top: 80px;
+		padding-bottom: 120px;
 	}
 	#overbottom
 	{
