--- a/public/css/style.css
+++ b/public/css/style.css
@@ -373,6 +373,20 @@ section
 	-o-transition: all 400ms ease;
 	transition: all 400ms ease;
 }
+.header_home
+{
+	display: block;
+	position: absolute;
+	width: 100%;
+	height: 100px;
+	background: transparent!important;
+	z-index: 1002;
+	-webkit-transition: all 400ms ease;
+	-moz-transition: all 400ms ease;
+	-ms-transition: all 400ms ease;
+	-o-transition: all 400ms ease;
+	transition: all 400ms ease;
+}
 .header_content
 {
 	width: 100%;
@@ -3643,7 +3657,7 @@ input[type="email"], input[type="password"], input[type="text"]
 #work
 {
 	width: 100%;
-	padding-top: 80px;
+	padding-top: 120px;
 }
 .work-pad{
 	padding-bottom: 20px;
